...
  
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "MessageThreadDetailTableViewController.addButton"
        
        tableView.accessibilityIdentifier = "MessagesTableView"
        tableView.separatorStyle = .none

        
        self.tableView.reloadData()
...
